Bug 1420911 - Ensure mBeforeUnloadListenerCount doesn't drop below 0 when FreeInnerObjects is called, r=qdot

MozReview-Commit-ID: EavGhe0Cfw